--- a/project/sass/manual_slider.sass
+++ b/project/sass/manual_slider.sass
@@ -9,8 +9,10 @@
 
 .mn_slider
   position: relative
-  max-width: 1020px
-  margin: auto
+  object-fit: cover
+  max-width: 1300px
+
+  margin-right: 50px
   border-radius: 20px
   overflow: hidden
 
